# craps-lab

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: main.py  routes.py  schemas.py  serializers.py
app/: streamlit_app.py
notebooks/: 01_two_dice_pmf.ipynb  02_line_bets.ipynb  03_come_bets.ipynb  04_free_odds.ipynb
src/craps_lab/: __init__.py  bets.py  campaign.py  charts.py  cli.py  dice.py  engine.py  play.py  probability.py  session.py  strategy.py
tests/: test_api.py  test_bets.py  test_campaign.py  test_charts.py  test_cli.py  test_convergence.py  test_dice.py  test_engine.py  test_play.py  test_probability.py  test_session.py  test_smoke.py  test_strategy.py
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  plotly.d.ts
web/src/components/: ChartCard.tsx  DrawdownChart.tsx  EquityChart.tsx  PnlChart.tsx  Sidebar.tsx  StatCards.tsx
web/src/lib/: api.ts  chartTheme.ts  format.ts  types.ts
