[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "craps-lab"
version = "0.0.0"
description = "A probability-first craps simulator: closed-form house edges, Monte Carlo convergence, and shooter-length Markov chains."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Raaid Ahmad" },
]
keywords = [
    "craps",
    "probability",
    "statistics",
    "monte-carlo",
    "simulation",
    "gambling",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/raaid-ahmad/craps-lab"
Issues = "https://github.com/raaid-ahmad/craps-lab/issues"
Repository = "https://github.com/raaid-ahmad/craps-lab"

[tool.hatch.build.targets.wheel]
packages = ["src/craps_lab"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle: docstrings added selectively, not mechanically enforced
    "ANN",     # flake8-annotations: mypy --strict handles annotations more precisely
    "COM812",  # trailing comma: conflicts with ruff formatter
    "ISC001",  # implicit string concat: conflicts with ruff formatter
    "CPY",     # flake8-copyright: repo LICENSE is the single source of truth
    "FIX",     # flake8-fixme: TODO/FIXME allowed mid-development
    "TD",      # flake8-todos: same
    "FBT",     # boolean trap: addressed per call site, not mechanically
    "PLR0913", # too many arguments: design review, not a mechanical cap
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert is the core of pytest
    "PLR2004", # magic numbers are fine in test assertions
    "INP001",  # tests/ is not an importable namespace
]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
pretty = true
show_error_codes = true
show_column_numbers = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
]
xfail_strict = true
filterwarnings = [
    "error",
]
